# GRRM

./: LICENSE  README.md  pyproject.toml
data/: run_annotation_GQM.py  run_annotation_SQM.py
eval/: bleurt_eval_cli.py  run_mt_eval.py  run_ranking_acc_eval.py
inference/: run_API_GQM.py  run_API_SQM.py  run_bleurt_cli.py  run_drm.py  run_mt.py  run_mt_ranker.py  run_mt_seedx.py  run_oss_GQM.py  run_oss_SQM.py  run_rm_GQM.py  run_rm_SQM.py
recipes/: GRRM_training_pipeline.md  MT_training_pipeline.md
scripts/: prepare_RL_GQM_training_data.py  prepare_RL_MT_training_data.py  prepare_SFT_GQM_training_data.py  prepare_SFT_MT_training_data.py
utils/: client.py  config.py  helpers.py  reward_utils.py
